--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "url": "https://github.com/mingqi/decodeurl-node.git"
   },
   "main": "decodeurl.js",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "dependencies": {
-    "jschardet" : "*",
+    "underscore" : "*",
     "iconv-lite" : "*"
   },
   "licenses": [
